Update email address for submission in index.html

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     </div>
     <div class="submit-btns">
       <a href="https://www.overleaf.com/read/sjymbvvrhsxb#7a323c" target="_blank" class="btn-lg filled">Open LaTeX Template ↗</a>
-      <a href="mailto:submit@aiagentjournal.org" class="btn-lg outline">Submit via Email</a>
+      <a href="mailto:editors@aiagentjournal.org" class="btn-lg outline">Submit via Email</a>
     </div>
   </div>
 </div>
