--- a/index.html
+++ b/index.html
@@ -108,6 +108,16 @@
   footer{border-top:1px solid var(--border);padding:1.8rem 5%;max-width:1100px;margin:0 auto;display:flex;justify-content:space-between;align-items:center;font-size:.78rem;font-family:system-ui,sans-serif;color:var(--muted)}
   footer a{color:var(--muted);text-decoration:underline;text-underline-offset:2px}
 </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-547ES76WLY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-547ES76WLY');
+</script>
+  
 </head>
 <body>
 
