Modify card content in index.html
Updated card tag and description for AI Agent.

--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
   </div>
   <div class="cards-row">
     <div class="card">
-      <div class="card-tag">Agent Design</div>
+      <div class="card-tag">AI Agent Portfolio Management</div>
       <h3>Architectures, memory, and tool use for long-horizon agents</h3>
-      <p>How agents store, retrieve, and act across extended task contexts.</p>
+      <p>Autonomous Portfolio and Derivatives Risk Management AI Agents: Risk-Aware Reinforcement Learning, Multi-Objective Optimization, and Explainable Allocation Decisions <a href="https://doi.org/10.5281/zenodo.18765343">https://doi.org/10.5281/zenodo.18765343</a>  </p>
       <div class="card-meta">Research Articles · System Reports</div>
     </div>
     <div class="card">
