Update Overleaf template link in index.html

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     <span class="section-label">Submission Format</span>
     <h2>LaTeX template (Overleaf)</h2>
   </div>
-  <p>All submissions must follow our standardised ten-section structure. Use the official Overleaf template — <a href="https://www.overleaf.com/read/sjymbvvrhsxb#7a323c" target="_blank" style="text-decoration:underline;text-underline-offset:3px">open it here</a>.</p>
+  <p>All submissions must follow our standardised ten-section structure. Use the official Overleaf template — <a href="https://www.overleaf.com/read/pznhbpvhdxwh#96b46f" target="_blank" style="text-decoration:underline;text-underline-offset:3px">open it here</a>.</p>
   <div class="format-grid">
     <div class="format-item"><span class="fmt-num">01</span><span class="fmt-text">Title, Authors, Affiliations & AI Involvement Disclosure</span></div>
     <div class="format-item"><span class="fmt-num">02</span><span class="fmt-text">Abstract — max 250 words, structured</span></div>
@@ -342,7 +342,7 @@
       <p style="margin-top:.8rem;font-size:.82rem;font-family:system-ui,sans-serif">Questions? <a href="mailto:editors@aiagentjournal.org" style="text-decoration:underline;text-underline-offset:2px">editors@aiagentjournal.org</a></p>
     </div>
     <div class="submit-btns">
-      <a href="https://www.overleaf.com/read/sjymbvvrhsxb#7a323c" target="_blank" class="btn-lg filled">Open LaTeX Template ↗</a>
+      <a href="https://www.overleaf.com/read/pznhbpvhdxwh#96b46f" target="_blank" class="btn-lg filled">Open LaTeX Template ↗</a>
       <a href="mailto:editors@aiagentjournal.org" class="btn-lg outline">Submit via Email</a>
     </div>
   </div>
