Add Ahrefs analytics script to index.html

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
   gtag('config', 'G-547ES76WLY');
 </script>
-  
+  <script src="https://analytics.ahrefs.com/analytics.js" data-key="scNAyB6Y9BWsluzxxfA7Hg" async></script>
 </head>
 <body>
 
