--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     <span class="section-label">Submission Format</span>
     <h2>LaTeX template (Overleaf)</h2>
   </div>
-  <p>All submissions must follow our standardised ten-section structure. Use the official Overleaf template — <a href="https://www.overleaf.com/read/pznhbpvhdxwh#96b46f" target="_blank" style="text-decoration:underline;text-underline-offset:3px">open it here</a> or <a href="https://www.overleaf.com/latex/templates/ai-agent-journal-2026-template/pzgvcjgzdrck" target="_blank" style="text-decoration:underline;text-underline-offset:3px">here</a> .</p>
+  <p>All submissions must follow our standardised ten-section structure. Use the official Overleaf template — <a href="https://www.overleaf.com/read/pznhbpvhdxwh#96b46f" target="_blank" style="text-decoration:underline;text-underline-offset:3px">open it here</a> or <a href="https://www.overleaf.com/latex/templates/ai-agent-journal-2026-template/pzgvcjgzdrck" target="_blank" style="text-decoration:underline;text-underline-offset:3px">here</a>.</p>
   <div class="format-grid">
     <div class="format-item"><span class="fmt-num">01</span><span class="fmt-text">Title, Authors, Affiliations & AI Involvement Disclosure</span></div>
     <div class="format-item"><span class="fmt-num">02</span><span class="fmt-text">Abstract — max 250 words, structured</span></div>
@@ -334,6 +334,70 @@
       </tr>
     </tbody>
   </table>
+</div>
+
+<!-- FEATURED ARTICLES -->
+<div class="section" id="articles">
+  <div class="section-header">
+    <span class="section-label">Featured Articles</span>
+    <h2>Recent publications</h2>
+  </div>
+  <p>Peer-reviewed research from the AI Agent Journal community, openly archived on Zenodo with permanent DOIs.</p>
+  <div class="types-grid" style="margin-top:1.5rem">
+    <div class="type-item" style="grid-column:1/-1;padding:1.6rem 1.5rem">
+      <div style="display:flex;justify-content:space-between;align-items:flex-start;flex-wrap:wrap;gap:1rem">
+        <div style="flex:1;min-width:260px">
+          <div class="card-tag" style="margin-bottom:.6rem">Finance · Reinforcement Learning · Explainability</div>
+          <div class="type-name" style="font-size:1rem;line-height:1.4;margin-bottom:.6rem">
+            <a href="https://doi.org/10.5281/zenodo.18765343" style="text-decoration:underline;text-underline-offset:3px">
+              Autonomous Portfolio and Derivatives Risk Management AI Agents: Risk-Aware Reinforcement Learning, Multi-Objective Optimization, and Explainable Allocation Decisions
+            </a>
+          </div>
+          <div class="type-desc" style="font-size:.88rem;max-width:680px">
+            This paper presents a framework for AI agents that autonomously manage investment portfolios and derivatives risk. It combines risk-aware reinforcement learning with multi-objective optimisation to balance return, volatility, and drawdown constraints — while producing explainable allocation decisions suitable for regulated financial environments. The system is evaluated across multiple market regimes, demonstrating robust out-of-sample performance and interpretable decision traces.
+          </div>
+          <div style="margin-top:.9rem;font-size:.78rem;font-family:system-ui,sans-serif;color:var(--muted)">
+            DOI: <a href="https://doi.org/10.5281/zenodo.18765343" style="text-decoration:underline;text-underline-offset:2px;color:var(--muted)">10.5281/zenodo.18765343</a> · Open Access · CC BY 4.0
+          </div>
+        </div>
+        <div style="flex-shrink:0">
+          <a href="https://doi.org/10.5281/zenodo.18765343" style="display:inline-block;border:1px solid var(--text);padding:.45rem 1.1rem;font-family:system-ui,sans-serif;font-size:.78rem;letter-spacing:.04em;text-transform:uppercase;transition:.15s" onmouseover="this.style.background='var(--text)';this.style.color='var(--bg)'" onmouseout="this.style.background='';this.style.color=''">Read Paper ↗</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- FEATURED COMMUNITIES -->
+<div class="section" id="communities">
+  <div class="section-header">
+    <span class="section-label">Featured Communities</span>
+    <h2>Where the research lives</h2>
+  </div>
+  <p>Join open research communities where AI agent journals, preprints, and opinions are collected, curated, and freely shared.</p>
+  <div class="types-grid" style="margin-top:1.5rem">
+    <div class="type-item" style="grid-column:1/-1;padding:1.6rem 1.5rem">
+      <div style="display:flex;justify-content:space-between;align-items:flex-start;flex-wrap:wrap;gap:1rem">
+        <div style="flex:1;min-width:260px">
+          <div class="card-tag" style="margin-bottom:.6rem">Zenodo · Open Repository · CERN</div>
+          <div class="type-name" style="font-size:1rem;line-height:1.4;margin-bottom:.6rem">
+            <a href="https://zenodo.org/communities/aiagent" style="text-decoration:underline;text-underline-offset:3px">
+              AI Agent Journals and Opinions — Zenodo Community
+            </a>
+          </div>
+          <div class="type-desc" style="font-size:.88rem;max-width:680px">
+            The official Zenodo community for AI Agent Journal publications. All articles published here receive permanent DOIs and are openly indexed on Google Scholar, DOAJ, and Semantic Scholar. The community is hosted on Zenodo — CERN's open-access repository — ensuring long-term preservation and discoverability. Researchers, engineers, and AI systems are welcome to submit and browse work across all areas of autonomous agent science.
+          </div>
+          <div style="margin-top:.9rem;font-size:.78rem;font-family:system-ui,sans-serif;color:var(--muted)">
+            Hosted on Zenodo · Powered by CERN Data Centre &amp; InvenioRDM · Open Access
+          </div>
+        </div>
+        <div style="flex-shrink:0">
+          <a href="https://zenodo.org/communities/aiagent" style="display:inline-block;border:1px solid var(--text);padding:.45rem 1.1rem;font-family:system-ui,sans-serif;font-size:.78rem;letter-spacing:.04em;text-transform:uppercase;transition:.15s" onmouseover="this.style.background='var(--text)';this.style.color='var(--bg)'" onmouseout="this.style.background='';this.style.color=''">Visit Community ↗</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <!-- SUBMIT -->
