Add favicon link to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>AI Agent Journal 2026</title>
+<link rel="icon" type="image/png" href="/logo/aiagent_logo_transparent.png">
 <style>
   :root{
     --bg:#f5f4ef;--text:#1a1a1a;--muted:#6b6b6b;--border:#d8d5cc;
